# aoc2024

./: .gitignore  01.hs  01b.hs  02.hs  02b.hs  03.hs  03b.hs  04.hs  LICENSE  answer-01b  aoc2024.cabal  shell.nix
.github/workflows/: haskell.yml
app/: day01.hs  day01p2.hs  day02.hs  day02p2.hs  day03.hs  day03p2.hs  day04.hs  day04p2.hs  day05.hs  day06.hs  day06p2.hs  day07.hs  day07p2.hs
